--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,7 @@
 {
   "name": "Node.js",
   // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-  "image": "mcr.microsoft.com/devcontainers/javascript-node:1-20-bullseye"
+  "image": "mcr.microsoft.com/devcontainers/javascript-node:1-20-bullseye",
 
   // Features to add to the dev container. More info: https://containers.dev/features.
   // "features": {},
@@ -15,7 +15,20 @@
   // "postCreateCommand": "yarn install",
 
   // Configure tool-specific properties.
-  // "customizations": {},
+  "customizations": {
+    "vscode": {
+      "extensions": ["ms-vscode.live-server", "esbenp.prettier-vscode"],
+      "settings": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode",
+        "[css]": {
+          "editor.formatOnSave": true
+        },
+        "[html]": {
+          "editor.formatOnSave": false
+        }
+      }
+    }
+  }
 
   // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
   // "remoteUser": "root"
